Add blog posts & update about

--- a/src/pages/posts/traffic-prediction.mdx
+++ b/src/pages/posts/traffic-prediction.mdx
@@ -3,7 +3,7 @@ layout: "@/layouts/BlogPost"
 title: Predicting Traffic with Live Images - A Fullstack Implementation
 publishDate: 29 Nov 2022
 description: A detailed explanation on how we leveraged computer vision and LTA's traffic camera API to predict and visualise traffic congestion on Singaporean highways. Part of coursework for DSA3101 Data Science in Practice
-tags: ["traffic", "singapore","yolox", "sahi", "opencv", "fastapi"]
+tags: ["traffic", "singapore","yolox", "sahi", "opencv", "api"]
 ---
 
 import { Image } from "@astrojs/image/components";
