new blog post: hack&roll 23

--- a/src/pages/posts/election-dashboard.mdx
+++ b/src/pages/posts/election-dashboard.mdx
@@ -15,7 +15,7 @@ import resultCard from "../../assets/result-card.png";
 <Image 
 	src={pruViz}
 	alt="An interactive election dashboard for the 15th Malaysian General Election"
-	class="mb-3"
+	class="mb-3 rounded-3xl"
 	format="webp"
 />
 
