--- a/src/pages/posts/fast-food.mdx
+++ b/src/pages/posts/fast-food.mdx
@@ -16,7 +16,7 @@ import kfcPlot from "../../assets/kfc-plot.png";
 <Image 
 	src={fastfoodGif}
 	alt="Fast Food Malaysia Counts 2022"
-	class="mb-3"
+	class="mb-3 rounded-3xl"
 	format="webp"
 />
 
